styles.css
@import
url('https://fonts.googleapis.com/css2?family=Raleway:300, 400, 700, 900');

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

html {
	height: 100%;
}

body{
	font-family: 'Raleway', sans-serif;
	margin: 0;
	text-align: center;
	min-height: 100%;
	display: flex;
	flex-direction: column;
}

.img {
	max-width: 100%;
	height: auto;
}

.container {
	width: 95%;
	margin: 0 auto;
}


/* cover
================== */

.cover{   

	height: 100vh;
	width: 100vw;
	background-color: rgb(225, 228, 83);
	background-image: url('images/cover-img2.jpg');
	background-size: cover;
	background-position: center;
	background-blend-mode: darken;
	
}
.cover header{
	position: relative;
	text-align: center;
	background-color: rgba(0,0,0,0);
	top: 300px;
}
.cover header a{
	padding: 10px;
	text-decoration: none;
	border: 4px solid black;
	font-family: 'Dancing Script', cursive;
	font-size: 4em;
	color: black;
	opacity: 0.9;
}

/* typography
	================== */

.title {
	font-size: 3rem;
	margin-bottom: 1rem;
}

.title span{
	font-weight: 300;
	display: block;
	font-size: .9em;
}

.button {
	display: inline-block;
	font-size: 1.5rem;
	text-decoration: none;
	text-transform: uppercase;
	border-width: 2px;
	border-style: solid;
	padding: .5em 1.75em;
}

.button-accent {
	color: #00ff6c;
	border-color: #00ff6c;
}

.button-accent:hover,
.button-accent:focus {
	background: #00ff6c;
	color: #232323;
}

.text h3 {
	text-transform: uppercase;
	font-weight: 400;
}

.contactcontainer h1 {
	text-transform: uppercase;
	font-size: 1.5rem;
	font-weight: 300;
}


/* Header 
================== */

nav {
	background-color: rgba(0,0,0,0.3);
	display: flex;
	flex-direction: column;
	min-height: 8vh;
	position: absolute;
	width: 100%;
	align-items: center;
}

.logo {
	list-style: none;
	z-index: 1;
}

.logo a{
	background-image: url('images/Frontier-logo\.png');
	background-size: 350px;
	background-position: center;
	background-repeat: no-repeat;
	text-indent: -9999999900px;
	display: flex; 
	width: 350px;
	height: 70px;
	margin-top: 10px;
}

.sidebar {
	margin-bottom: 15px;;
	display: flex;
	flex-direction: row;
	justify-content: center;
	width: 100%;
	
}

.sidebar li {
	 list-style: none;
}

.sidebar a { 
	font-weight: 400;
	text-decoration: none;
	text-transform: uppercase;
	font-size: .8rem;
	padding: 2em;
	color: white;
}

.burger {
	display: none;
	margin: auto 15px;
	cursor: pointer;
}

.burger div {
	background-color: white;
	opacity: 0.8;
	width: 1.5rem;
	height: 0.1rem;
	margin: 0.4rem 0;
	transition: all 0.3s ease;
	
}
nav a:hover,
nav a:focus {
	color: #DDD;
} 

.icons {
	width: 100%;
	position: absolute;
	transform: translate(0, 20px);
	right: 10px;
	display: flex;
	justify-content: flex-end;
	font-size: 15px;
	z-index: 0;
}

.icons li {
	list-style: none;
	padding: 10px 15px;
}

/* Home-hero 
================== */

.home-hero {
	background-size: cover;
	background-position: center;
	background-color: rgb(27, 25, 34);
	background-image:
	url(images/Jewelry.jpg);
	height: 100vh;
	padding-top: 35vh;
	background-blend-mode: lighten;
}

/* Contact-hero
================== */

.contact-hero {
	background-color: rgb(145, 145, 189);
	height: 100vh;
	background-position: center;
	background-repeat: no-repeat;
}

.contactcontainer {
	height: 30vh;
}
.contactcontainer .title {
	margin-top: 130px;
}

.content {
	display: flex;
	flex-direction: column;
	text-align: left;
}


/* Footer
================== */

footer {
	display: flex;
	margin-top: auto;
	width: 100%;
	height: 3rem;
	padding: 0;
	position: absolute;
	bottom: 0;
	background-color: rgba(0,0,0,0);
	list-style: none;
	justify-content: flex-end;
}

footer li {
	margin-top: 20px;
}
.socialmedialinks {
	color: rgb(255, 255, 255);
}

.socialmedialinks a {
	padding: 0.5rem;
}

footer li h3{
	color: rgb(255, 255, 255);
	font-weight: 100;
	font-size: 1em;
	margin-right: 5px;
	border-right: solid;
	border-width: thin;
	padding-right: 10px;
}

.logo-small a {
	background-image: url('images/Frontier-logo.png');
	background-size: 260px;
	background-position: 50% 58%;
	background-repeat: no-repeat;
	text-indent: -9999999999px;
	height: 50px;
	width: 250px;
	display: flex;
}






/* iPad/iPad pro */
@media only screen and (min-width: 200px) and (max-width: 855px)  {
	
	/* typography
	================== */

	.title{
		font-size: 2.5rem;
		margin-bottom: 1.15em;
	}
	
	.button {
		font-size: 1.15rem;
	}

	/* Header (sidebar)
	=================== */

	body {
		overflow-x: hidden;
	}


	nav {
		background-color: rgba(0,0,0,0);
		flex-direction: row-reverse;
		align-items: flex-start;
	}
	
	.icons{
		font-size: 20px;
		top: -2px;

	}

	.icons > li:first-child {
		position: absolute;
		left: 60px;
	}

	/* sidebar 
	=================== */

	.sidebar {
		justify-content: start;
		background-color:  rgb(223, 140, 140);
		display: flex;
		flex-direction: column;
		left: 0;
		position: absolute;
		height: 100vh;
		width: 30%;
		transform: translateX(-100%);
		z-index: 2;
	}

	.sidebar li {
		text-align: left;
		margin-top: 20px;
	}

	.sidebar li:first-child {
		margin-top: 70px;
	}

	.sidebar-active {
		transform: translateX(0%);
		transition: transform 0.2s ease-in; 
	
	}

	.toggle .line1{
		transform: rotate(-45deg) translate(-5px, 6px) ;
		
	}

	.toggle .line2{
		opacity: 0;
	}

	.toggle .line3{
		transform: rotate(45deg) translate(-5px, -6px) ;
		
	}

	.burger {
		z-index: 2;
		margin-top: 23px;
		margin-left: 20px;
		display: block;
	}

	.shade {
		position: absolute;
		background-color: black;
		opacity: 0;
		margin-left: auto;
		margin-right: 0;
		width: 100%;
		height: 100vh;
		z-index: -1;
		transition: ease-in-out 0.5s;
		
	}

	.shade-show {
		transition: ease-in-out 0.5s;
		opacity: 0.5;
		z-index: 1;
	}

	/* Logo
	================== */

	.logo {
		
		margin: 0 auto;
	}

	.logo a {
		display: relative;
		background-position: center;
		background-size: 350px;
		width: 300px;
		height: 60px;
		margin-left: -44px;
		
	}

		
	/* Footer 
	================== */

	footer {
		z-index: 0;
		text-align: center;
		background: rgb(82, 21, 21); 
	}

}



/* mobile/cellphone widths */
@media only screen and (min-width: 200px) and (max-width: 500px)  {
	
	/* typography
	================== */

	.title {
		font-size: 2.3rem;
		margin-bottom: 4rem;
	}
	
	.title span{
		font-weight: 300;
		display: block;
		font-size: .9em;
	}

	/* Header (sidebar)
	=================== */

	.logo a {
		background-size: 250px;
	}

	.icons {
		font-size: 15px;
		right: 5px;
		top: 1px;
	}
	.icons > li:nth-child(2) {
		padding-right: 10px;
	}
	.icons > li:first-child {
		position: absolute;
		left: 50px;
	}
	
	/* Home-hero 
	================== */

	.home-hero {
		height: 50vh;
		padding-top: 15vh;
		background-position: center;
	}

	/* Home-about
	================== */

	.home-about {
		height: 50vh;
		background-color: black;
	}

	/* Sidebar
	================== */

	.sidebar{
		width: 80%;
	}

	/* Footer 
	================== */

	footer {
		height: 12rem;
		position: static;
	}
	
	.logo-small {
		top: 20px;
		margin: 0px auto;
	}

	footer li {
		top: 20px;
		position: relative;
		display: block;
		color: rgb(255, 255, 255);
		margin: 20px 0;
	}
	footer li h3 {
		font-weight: 100;
		font-size: 1em;
		margin-bottom: 30px;
	}
	footer li a {
		padding: 0.5rem;
	}


}

